--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ langchain-community~=0.2.17
 openai~=1.50.2
 langchain-text-splitters~=0.2.4
 langchain-openai~=0.2.1
+langchain-core~=0.3.6
+python-dotenv~=1.0.1
